# BoundLaunch

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README-PORTABLE.md  README.md  build.bat  build.config.README.md  build.config.example.json  build.config.json  build.mjs  build.sh  index.html  package-lock.json  package.json  probe_path.py  probe_torch_only.py  probe_torch_test.py  run.bat  run.sh  tsconfig.json  vite.config.ts
cache/: transformers_versions.json
data/: config.toml  launcher.sqlite-shm  launcher.sqlite-wal  transformers_versions.json
scripts/: build_portable.mjs  fetch-uv.ps1
src/: App.vue  env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/nsis/: installer_hooks.nsh
src-tauri/resources/uv/: .gitkeep  README.md
src-tauri/src/: app_state.rs  error.rs  event_bus.rs  lib.rs  main.rs  tray.rs  uv_sidecar.rs
src-tauri/src/commands/: config.rs  core_manager.rs  dev_log.rs  env_inspector.rs  log_store.rs  mod.rs  model_path.rs  plugin_manager.rs  port_diagnostics.rs  process_launcher.rs  pseudo_terminal.rs  python_env.rs  system.rs  task_scheduler.rs  updater.rs
src-tauri/src/common/: ansi.rs  line_collector.rs  mod.rs  paths.rs  platform.rs  process_util.rs  subprocess.rs
src-tauri/src/config/: atomic_write.rs  migrations.rs  mod.rs  models.rs  service.rs
src-tauri/src/core_manager/: compat.rs  git_ops.rs  git_ops_async.rs  mod.rs  models.rs  paths.rs  repo_switcher.rs  semver.rs  switcher.rs  tags.rs
src-tauri/src/env_inspector/: cache.rs  dependency_conflict.rs  deps.rs  gpu.rs  mod.rs  models.rs  readiness.rs  scripts.rs
src-tauri/src/log_store/: mod.rs  repository.rs  retention.rs  schema.rs
src-tauri/src/model_path/: mod.rs  models.rs  scanner.rs  yaml_gen.rs
src-tauri/src/paths/: env_paths.rs  mod.rs
src-tauri/src/plugin_manager/: comfyui_core.rs  git_ops.rs  mod.rs  models.rs  registry.rs  trash.rs  url_util.rs  venv_health.rs
src-tauri/src/process_launcher/: command_builder.rs  log_pipeline.rs  mod.rs  models.rs  respawn.rs  ring_buffer.rs  session.rs  shutdown.rs  start.rs  state_machine.rs  stop.rs
src-tauri/src/pseudo_terminal/: mod.rs  models.rs  service.rs
src-tauri/src/python_env/: compatibility.rs  freeze.rs  mod.rs  models.rs  recovery.rs  torch_variant.rs  transformers.rs  transformers_index.rs  uv_runner.rs  verify.rs
src-tauri/src/system/: gpu.rs  gpu_cache.rs  hardware_fingerprint.rs  mod.rs  recommend.rs
src-tauri/src/task_scheduler/: factory.rs  history.rs  mod.rs  models.rs  progress.rs  runner.rs  task.rs
src-tauri/src/updater/: apply.rs  download.rs  manifest.rs  mod.rs  paths.rs
src/api/: config.ts  core.ts  env.ts  index.ts  log.ts  model.ts  plugin.ts  port_diagnostics.ts  process.ts  task.ts  types.ts  updater.ts
src/components/: AppHeader.vue  AppPlugins.vue  ErrorPage.vue  FolderPicker.vue  SafeIcon.vue
src/components/core/: SwitchVersionDialog.vue  VersionTable.vue
src/components/icons/: index.ts
src/components/launch/: AdvancedParamsPanel.vue  BasicParamsForm.vue  CommandPreview.vue  DependencyList.vue  ErrorPanelCard.vue  InstallLogsTab.vue  LaunchModeSelector.vue  PortConflictModal.vue  RunningLogsTab.vue  RunningStatusPanel.vue  StartProgressCard.vue  StartStopButtons.vue  StatusCard.vue  TerminalPanel.vue  TerminalTab.vue
src/components/settings/: DangerZonePanel.vue  DataLocationPanel.vue  DependenciesPanel.vue  GpuPanel.vue  LaunchAdvancedPanel.vue  PathsPanel.vue  PythonVersionPanel.vue  RepairWizard.vue  RepoUrlDialog.vue  TorchConfigPanel.vue  TransformersConfigPanel.vue  UiPanel.vue
src/components/system/: GpuSelector.vue  HardwareChangeDialog.vue  TorchInstallFallbackDialog.vue
src/composables/: useConfirm.ts  useDevLog.ts  useEnvInstaller.ts  useErrorClassifier.ts  useErrorLog.ts  useExitConfirm.ts  useIconColor.ts  useShutdown.ts  useStartComfyui.ts  useSwitchVersion.ts  useTagRules.ts  useTaskProgress.ts  useToast.ts
src/layouts/: MainLayout.vue
src/plugins/: crashRecovery.ts  shortcut.ts  tray.ts
src/router/: guards.ts  index.ts
src/stores/: config.ts  core.ts  env.ts  modelPath.ts  plugin.ts  process.ts  task.ts  theme.ts
src/styles/: main.css
src/utils/: commandBuilder.ts  torchVariant.ts
src/views/: AboutPage.vue  CoreVersionPage.vue  LaunchPage.vue  LogsPage.vue  ModelPathPage.vue  OnboardingPage.vue  PluginPage.vue  SettingsPage.vue  TaskCenterPage.vue
