[package]
name = "bound-launch"
version = "0.1.0"
description = "无界启动器 (BoundLaunch) - ComfyUI 启动器"
authors = ["BoundLaunch"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "bound_launch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-process = "2.0"

# 异步运行时
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 并发原语
arc-swap = "1.7"
parking_lot = "0.12"
rayon = "1.10"
dashmap = "5.5"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }

# Git
git2 = { version = "0.19", features = ["ssh_key_from_memory"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# 时间 / UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# 文件系统
fs2 = "0.4"
sanitize-filename = "0.5"
walkdir = "2.5"
# Windows junction / Unix symlink 跨平台软链接（用于 models 等数据目录独立化）
junction = "1.2"

# 工具
dirs = "5.0"
once_cell = "1.20"
indexmap = { version = "2.4", features = ["serde"] }
regex = "1.10"
# v3.4.2：Windows GBK → UTF-8 编码转换（taskkill / wmic 输出解码）
encoding_rs = "0.8"

[target.'cfg(windows)'.dependencies]
# v3.10：LoadLibraryW + MessageBoxW 用于启动期 DLL 缺失检测
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
# 测试中用 tempfile::tempdir() 创建临时目录
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
# panic = "unwind"：TaskScheduler 依赖 catch_unwind 捕获 action panic
# 避免单任务 panic 导致整个应用崩溃（详见 PR/03-模块设计/08-TaskScheduler.md §10.1）
